@@ -4,6 +4,7 @@ import aiss.bitbucket.model.issues.Issue;
 import aiss.bitbucket.model.issues.Content;
 import aiss.bitbucket.model.issues.ListIssues;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.ArrayList;
@@ -11,12 +12,13 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+@Service
 public class IssueService {
 
     @Autowired
     RestTemplate restTemplate;
 
-    public List<Issue> getAllIssues(String workspace, String repo_slug) {
+    public List<Issue> getAllIssues(String workspace, String repo_slug, int nIssues, int maxPages) {
         List<Issue> issues = new ArrayList<>();
 
         String uri = "https://api.bitbucket.org/2.0/repositories/" + workspace + "/" + repo_slug + "/issues";
@@ -35,38 +37,33 @@ public class IssueService {
                 issue.setVotes(bi.getVotes());
 
                 Content content = bi.getContent();
-                if (content != null && content.getRaw() != null) {
-                    issue.setDescription(content.getRaw());
-                } else {
-                    issue.setDescription(null);
-                }
+                issue.setDescription(content != null ? content.getRaw() : null);
 
-                if (bi.getKind() != null) {
-                    issue.setLabels(List.of(bi.getKind()));
-                } else {
-                    issue.setLabels(Collections.emptyList());
-                }
+                issue.setLabels(bi.getKind() != null ? List.of(bi.getKind()) : Collections.emptyList());
 
                 issues.add(issue);
 
+                if (issues.size() >= nIssues)
+                    break;
             }
         }
+
         return issues;
     }
 
-    public Issue getIssueById(String id, String workspace, String repo_slug) {
-        List<Issue> allIssues = getAllIssues(workspace, repo_slug);
+    public Issue getIssueById(String id, String workspace, String repo_slug, int nIssues, int maxPages) {
+        List<Issue> allIssues = getAllIssues(workspace, repo_slug, nIssues, maxPages);
         if (allIssues != null) {
             Optional<Issue> found = allIssues.stream()
-                    .filter(i->i.getId().equals(id))
+                    .filter(i -> i.getId().equals(id))
                     .findFirst();
             return found.orElse(null);
         }
         return null;
     }
 
-    public List<Issue> getIssuesByState(String state, String workspace, String repo_slug) {
-        List<Issue> allIssues = getAllIssues(workspace, repo_slug);
+    public List<Issue> getIssuesByState(String state, String workspace, String repo_slug, int nIssues, int maxPages) {
+        List<Issue> allIssues = getAllIssues(workspace, repo_slug, nIssues, maxPages);
         if (allIssues == null || allIssues.isEmpty()) {
             return Collections.emptyList();
         }
